// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Browser Search deleteStore failures returns an error when the store to delete does not exist 1`] = `
"Evaluation failed: Error: An error occured when deleting store \\"unknown\\": An error occured when opening Database browser-search: AbortError: Version change transaction was aborted in upgradeneeded event handler.
    at http://localhost:8081/script/index.js:9318:34"
`;

exports[`Browser Search getAllValuesOfProperty failures fails when the property is not indexed 1`] = `
"Evaluation failed: Error: An error occured when getting the unique keys for store \\"persons\\", index \\"unknown\\". Make sure the store and the index exist. Error: Failed to execute 'index' on 'IDBObjectStore': The specified index was not found.
    at http://localhost:8081/script/index.js:9382:15
    at EitherAsyncImpl.runPromise (http://localhost:8081/script/index.js:9517:183)
    at EitherAsyncImpl.<anonymous> (http://localhost:8081/script/index.js:6031:51)
    at step (http://localhost:8081/script/index.js:5891:23)
    at Object.next (http://localhost:8081/script/index.js:5872:53)
    at http://localhost:8081/script/index.js:5866:71
    at new Promise (<anonymous>)
    at __webpack_modules__../node_modules/purify-ts/EitherAsync.js.__awaiter (http://localhost:8081/script/index.js:5862:12)
    at EitherAsyncImpl.__webpack_modules__../node_modules/purify-ts/EitherAsync.js.EitherAsyncImpl.run (http://localhost:8081/script/index.js:6024:16)
    at EitherAsyncImpl.then (http://localhost:8081/script/index.js:5933:26)"
`;

exports[`Browser Search getAllValuesOfProperty failures fails when the store does not exist 1`] = `
"Evaluation failed: Error: An error occured when getting the unique keys for store \\"unknown\\", index \\"country\\". Make sure the store and the index exist. Error: Failed to execute 'transaction' on 'IDBDatabase': One of the specified object stores was not found.
    at http://localhost:8081/script/index.js:9382:15
    at EitherAsyncImpl.runPromise (http://localhost:8081/script/index.js:9517:183)
    at EitherAsyncImpl.<anonymous> (http://localhost:8081/script/index.js:6031:51)
    at step (http://localhost:8081/script/index.js:5891:23)
    at Object.next (http://localhost:8081/script/index.js:5872:53)
    at http://localhost:8081/script/index.js:5866:71
    at new Promise (<anonymous>)
    at __webpack_modules__../node_modules/purify-ts/EitherAsync.js.__awaiter (http://localhost:8081/script/index.js:5862:12)
    at EitherAsyncImpl.__webpack_modules__../node_modules/purify-ts/EitherAsync.js.EitherAsyncImpl.run (http://localhost:8081/script/index.js:6024:16)
    at EitherAsyncImpl.then (http://localhost:8081/script/index.js:5933:26)"
`;

exports[`Browser Search getAllValuesOfProperty successes returns all the colours available 1`] = `
Array [
  "blue",
  "brown",
  "dark",
  "green",
  "pink",
  "purple",
  "red",
  "white",
  "yellow",
]
`;

exports[`Browser Search getAllValuesOfProperty successes returns all the countries available 1`] = `
Array [
  "Barbados",
  "Belarus",
  "Bulgaria",
  "Cape Verde",
  "Djibouti",
  "Dominican Republic",
  "Finland",
  "French Southern Territories",
  "Israel",
  "Niger",
  "Norfolk Island",
  "Paraguay",
  "Saudi Arabia",
  "Taiwan",
  "Tajikistan",
]
`;

exports[`Browser Search getCount fails when the store does not exist 1`] = `
"Evaluation failed: Error: An error occured when getting the number of items of store \\"unknown\\". Make sure the store exist. Error: Failed to execute 'transaction' on 'IDBDatabase': One of the specified object stores was not found.
    at http://localhost:8081/script/index.js:9330:31
    at EitherAsyncImpl.runPromise (http://localhost:8081/script/index.js:9530:171)
    at EitherAsyncImpl.<anonymous> (http://localhost:8081/script/index.js:6031:51)
    at step (http://localhost:8081/script/index.js:5891:23)
    at Object.next (http://localhost:8081/script/index.js:5872:53)
    at http://localhost:8081/script/index.js:5866:71
    at new Promise (<anonymous>)
    at __webpack_modules__../node_modules/purify-ts/EitherAsync.js.__awaiter (http://localhost:8081/script/index.js:5862:12)
    at EitherAsyncImpl.__webpack_modules__../node_modules/purify-ts/EitherAsync.js.EitherAsyncImpl.run (http://localhost:8081/script/index.js:6024:16)
    at EitherAsyncImpl.then (http://localhost:8081/script/index.js:5933:26)"
`;

exports[`Browser Search getItems failures returns an error when the store does not exist 1`] = `
[Error: Evaluation failed: DOMException: Failed to execute 'transaction' on 'IDBDatabase': One of the specified object stores was not found.
    at http://localhost:8081/script/index.js:9388:28
    at EitherAsyncImpl.runPromise (http://localhost:8081/script/index.js:9516:167)
    at EitherAsyncImpl.<anonymous> (http://localhost:8081/script/index.js:6031:51)
    at step (http://localhost:8081/script/index.js:5891:23)
    at Object.next (http://localhost:8081/script/index.js:5872:53)
    at http://localhost:8081/script/index.js:5866:71
    at new Promise (<anonymous>)
    at __webpack_modules__../node_modules/purify-ts/EitherAsync.js.__awaiter (http://localhost:8081/script/index.js:5862:12)
    at EitherAsyncImpl.__webpack_modules__../node_modules/purify-ts/EitherAsync.js.EitherAsyncImpl.run (http://localhost:8081/script/index.js:6024:16)
    at EitherAsyncImpl.then (http://localhost:8081/script/index.js:5933:26)]
`;

exports[`Browser Search search Failures aborts the search 1`] = `
"Evaluation failed: Error: The search request was aborted
    at abort (http://localhost:8081/script/index.js:15991:22)
    at __puppeteer_evaluation_script__:9:37"
`;

exports[`Browser Search search successes performs a search with 1 filter 1`] = `
Object {
  "data": Array [
    Object {
      "age": 18,
      "country": "Taiwan",
      "email": "losuh@olaga.vc",
      "favoriteColours": Array [
        "red",
      ],
      "id": "16842fce-5775-5ee0-9173-0617d7216720",
      "name": "Philip Anderson",
      "profession": "Recruiter",
      "salary": 86023,
    },
    Object {
      "age": 22,
      "country": "Bulgaria",
      "email": "tigki@du.mr",
      "favoriteColours": Array [
        "pink",
        "red",
        "purple",
        "yellow",
      ],
      "id": "889f8cf9-d1a3-5276-8af5-0600bc8954e7",
      "name": "Mark Maxwell",
      "profession": "Chiropractor",
      "salary": 79637,
    },
    Object {
      "age": 20,
      "country": "Cape Verde",
      "email": "cuw@ege.hr",
      "favoriteColours": Array [
        "purple",
        "white",
        "pink",
      ],
      "id": "9317f72f-9582-563b-8b48-da724c2af540",
      "name": "Emma Bridges",
      "profession": "Office Manager",
      "salary": 63775,
    },
    Object {
      "age": 18,
      "country": "Israel",
      "email": "ci@adutujno.sa",
      "favoriteColours": Array [
        "dark",
      ],
      "id": "eff140aa-6ea3-5ea6-ac3b-c07a8ce01f63",
      "name": "Hettie Ward",
      "profession": "Office Manager",
      "salary": 95544,
    },
  ],
  "type": "items",
}
`;

exports[`Browser Search search successes returns all items 1`] = `
Object {
  "data": Array [
    Object {
      "age": 30,
      "country": "Norfolk Island",
      "email": "tojedwo@dewpupi.pw",
      "favoriteColours": Array [
        "red",
        "blue",
        "white",
      ],
      "id": "03330c3f-1142-52b5-a2e7-24f4b2349556",
      "name": "Alfred Rhodes",
      "profession": "Organizational Development Manager",
      "salary": 53462,
    },
    Object {
      "age": 50,
      "country": "Dominican Republic",
      "email": "nul@ko.vc",
      "favoriteColours": Array [],
      "id": "12cf4edc-bdb0-5a8e-869f-638bf4990e07",
      "name": "Gavin Adkins",
      "profession": "Private Banker",
      "salary": 60744,
    },
    Object {
      "age": 18,
      "country": "Taiwan",
      "email": "losuh@olaga.vc",
      "favoriteColours": Array [
        "red",
      ],
      "id": "16842fce-5775-5ee0-9173-0617d7216720",
      "name": "Philip Anderson",
      "profession": "Recruiter",
      "salary": 86023,
    },
    Object {
      "age": 64,
      "country": "Djibouti",
      "email": "ag@litsu.ar",
      "favoriteColours": Array [
        "brown",
        "white",
      ],
      "id": "17a3b9f6-0348-54ae-9090-9861bdcaaaf1",
      "name": "Linnie McGuire",
      "profession": "Fund Raiser",
      "salary": 64126,
    },
    Object {
      "age": 32,
      "country": "French Southern Territories",
      "email": "kotuligen@jopme.dk",
      "favoriteColours": Array [
        "white",
      ],
      "id": "1c7cf27a-8fce-57f9-9e90-03273e63dd3a",
      "name": "Randall Fields",
      "profession": "Production Engineer",
      "salary": 82114,
    },
    Object {
      "age": 64,
      "country": "Niger",
      "email": "nanefse@bazuvoric.tt",
      "favoriteColours": Array [
        "blue",
        "red",
      ],
      "id": "68200794-220b-509b-b367-7c769f05767d",
      "name": "Katie Lambert",
      "profession": "Fraud Investigator",
      "salary": 45390,
    },
    Object {
      "age": 33,
      "country": "Barbados",
      "email": "erupu@pafo.sl",
      "favoriteColours": Array [
        "red",
        "green",
      ],
      "id": "7aa57520-19ad-5fcb-aa7e-0a80b388cd80",
      "name": "Howard Bishop",
      "profession": "Franchise Management",
      "salary": 86221,
    },
    Object {
      "age": 56,
      "country": "Saudi Arabia",
      "email": "apemedop@suhe.ye",
      "favoriteColours": Array [
        "yellow",
      ],
      "id": "84b1d734-52da-5009-855e-ad7e2a610b20",
      "name": "Josie Baldwin",
      "profession": "Executive Recruiter",
      "salary": 90167,
    },
    Object {
      "age": 48,
      "country": "Paraguay",
      "email": "zesedbuw@fec.al",
      "favoriteColours": Array [
        "dark",
        "blue",
      ],
      "id": "87e83681-7cd7-5200-b50b-493fd7bbabb5",
      "name": "Josephine Holland",
      "profession": "Corporate Planner",
      "salary": 23682,
    },
    Object {
      "age": 22,
      "country": "Bulgaria",
      "email": "tigki@du.mr",
      "favoriteColours": Array [
        "pink",
        "red",
        "purple",
        "yellow",
      ],
      "id": "889f8cf9-d1a3-5276-8af5-0600bc8954e7",
      "name": "Mark Maxwell",
      "profession": "Chiropractor",
      "salary": 79637,
    },
    Object {
      "age": 20,
      "country": "Cape Verde",
      "email": "cuw@ege.hr",
      "favoriteColours": Array [
        "purple",
        "white",
        "pink",
      ],
      "id": "9317f72f-9582-563b-8b48-da724c2af540",
      "name": "Emma Bridges",
      "profession": "Office Manager",
      "salary": 63775,
    },
    Object {
      "age": 40,
      "country": "Belarus",
      "email": "dumoov@igiiva.bf",
      "favoriteColours": Array [
        "red",
      ],
      "id": "c59be44f-7c6d-55a6-aec1-585da9645888",
      "name": "George Marsh",
      "profession": "Compensation Analyst",
      "salary": 77502,
    },
    Object {
      "age": 50,
      "country": "Tajikistan",
      "email": "votdumbi@napedocu.us",
      "favoriteColours": Array [
        "purple",
        "blue",
        "brown",
        "pink",
      ],
      "id": "cb841649-bcf9-5acd-a85b-763da24ec749",
      "name": "Jose Matthews",
      "profession": "Quality Control Engineer",
      "salary": 96922,
    },
    Object {
      "age": 18,
      "country": "Israel",
      "email": "ci@adutujno.sa",
      "favoriteColours": Array [
        "dark",
      ],
      "id": "eff140aa-6ea3-5ea6-ac3b-c07a8ce01f63",
      "name": "Hettie Ward",
      "profession": "Office Manager",
      "salary": 95544,
    },
    Object {
      "age": 48,
      "country": "Finland",
      "email": "ebgoh@gaaw.cy",
      "favoriteColours": Array [
        "brown",
        "red",
      ],
      "id": "f569f9cd-9d4a-5753-9310-ba239f59f175",
      "name": "Pauline Walters",
      "profession": "Relocation Manager",
      "salary": 20408,
    },
  ],
  "type": "items",
}
`;

exports[`Browser Search search successes returns all people who like the red / blue / green colour 1`] = `
Object {
  "data": Array [
    Object {
      "age": 30,
      "country": "Norfolk Island",
      "email": "tojedwo@dewpupi.pw",
      "favoriteColours": Array [
        "red",
        "blue",
        "white",
      ],
      "id": "03330c3f-1142-52b5-a2e7-24f4b2349556",
      "name": "Alfred Rhodes",
      "profession": "Organizational Development Manager",
      "salary": 53462,
    },
    Object {
      "age": 18,
      "country": "Taiwan",
      "email": "losuh@olaga.vc",
      "favoriteColours": Array [
        "red",
      ],
      "id": "16842fce-5775-5ee0-9173-0617d7216720",
      "name": "Philip Anderson",
      "profession": "Recruiter",
      "salary": 86023,
    },
    Object {
      "age": 64,
      "country": "Niger",
      "email": "nanefse@bazuvoric.tt",
      "favoriteColours": Array [
        "blue",
        "red",
      ],
      "id": "68200794-220b-509b-b367-7c769f05767d",
      "name": "Katie Lambert",
      "profession": "Fraud Investigator",
      "salary": 45390,
    },
    Object {
      "age": 33,
      "country": "Barbados",
      "email": "erupu@pafo.sl",
      "favoriteColours": Array [
        "red",
        "green",
      ],
      "id": "7aa57520-19ad-5fcb-aa7e-0a80b388cd80",
      "name": "Howard Bishop",
      "profession": "Franchise Management",
      "salary": 86221,
    },
    Object {
      "age": 48,
      "country": "Paraguay",
      "email": "zesedbuw@fec.al",
      "favoriteColours": Array [
        "dark",
        "blue",
      ],
      "id": "87e83681-7cd7-5200-b50b-493fd7bbabb5",
      "name": "Josephine Holland",
      "profession": "Corporate Planner",
      "salary": 23682,
    },
    Object {
      "age": 22,
      "country": "Bulgaria",
      "email": "tigki@du.mr",
      "favoriteColours": Array [
        "pink",
        "red",
        "purple",
        "yellow",
      ],
      "id": "889f8cf9-d1a3-5276-8af5-0600bc8954e7",
      "name": "Mark Maxwell",
      "profession": "Chiropractor",
      "salary": 79637,
    },
    Object {
      "age": 40,
      "country": "Belarus",
      "email": "dumoov@igiiva.bf",
      "favoriteColours": Array [
        "red",
      ],
      "id": "c59be44f-7c6d-55a6-aec1-585da9645888",
      "name": "George Marsh",
      "profession": "Compensation Analyst",
      "salary": 77502,
    },
    Object {
      "age": 50,
      "country": "Tajikistan",
      "email": "votdumbi@napedocu.us",
      "favoriteColours": Array [
        "purple",
        "blue",
        "brown",
        "pink",
      ],
      "id": "cb841649-bcf9-5acd-a85b-763da24ec749",
      "name": "Jose Matthews",
      "profession": "Quality Control Engineer",
      "salary": 96922,
    },
    Object {
      "age": 48,
      "country": "Finland",
      "email": "ebgoh@gaaw.cy",
      "favoriteColours": Array [
        "brown",
        "red",
      ],
      "id": "f569f9cd-9d4a-5753-9310-ba239f59f175",
      "name": "Pauline Walters",
      "profession": "Relocation Manager",
      "salary": 20408,
    },
  ],
  "type": "items",
}
`;

exports[`Browser Search search successes returns all people who like the red / blue / green colour AND are old 1`] = `
Object {
  "data": Array [
    Object {
      "age": 64,
      "country": "Niger",
      "email": "nanefse@bazuvoric.tt",
      "favoriteColours": Array [
        "blue",
        "red",
      ],
      "id": "68200794-220b-509b-b367-7c769f05767d",
      "name": "Katie Lambert",
      "profession": "Fraud Investigator",
      "salary": 45390,
    },
  ],
  "type": "items",
}
`;

exports[`Browser Search search successes returns all people who like the red colour 1`] = `
Object {
  "data": Array [
    Object {
      "age": 30,
      "country": "Norfolk Island",
      "email": "tojedwo@dewpupi.pw",
      "favoriteColours": Array [
        "red",
        "blue",
        "white",
      ],
      "id": "03330c3f-1142-52b5-a2e7-24f4b2349556",
      "name": "Alfred Rhodes",
      "profession": "Organizational Development Manager",
      "salary": 53462,
    },
    Object {
      "age": 18,
      "country": "Taiwan",
      "email": "losuh@olaga.vc",
      "favoriteColours": Array [
        "red",
      ],
      "id": "16842fce-5775-5ee0-9173-0617d7216720",
      "name": "Philip Anderson",
      "profession": "Recruiter",
      "salary": 86023,
    },
    Object {
      "age": 64,
      "country": "Niger",
      "email": "nanefse@bazuvoric.tt",
      "favoriteColours": Array [
        "blue",
        "red",
      ],
      "id": "68200794-220b-509b-b367-7c769f05767d",
      "name": "Katie Lambert",
      "profession": "Fraud Investigator",
      "salary": 45390,
    },
    Object {
      "age": 33,
      "country": "Barbados",
      "email": "erupu@pafo.sl",
      "favoriteColours": Array [
        "red",
        "green",
      ],
      "id": "7aa57520-19ad-5fcb-aa7e-0a80b388cd80",
      "name": "Howard Bishop",
      "profession": "Franchise Management",
      "salary": 86221,
    },
    Object {
      "age": 22,
      "country": "Bulgaria",
      "email": "tigki@du.mr",
      "favoriteColours": Array [
        "pink",
        "red",
        "purple",
        "yellow",
      ],
      "id": "889f8cf9-d1a3-5276-8af5-0600bc8954e7",
      "name": "Mark Maxwell",
      "profession": "Chiropractor",
      "salary": 79637,
    },
    Object {
      "age": 40,
      "country": "Belarus",
      "email": "dumoov@igiiva.bf",
      "favoriteColours": Array [
        "red",
      ],
      "id": "c59be44f-7c6d-55a6-aec1-585da9645888",
      "name": "George Marsh",
      "profession": "Compensation Analyst",
      "salary": 77502,
    },
    Object {
      "age": 48,
      "country": "Finland",
      "email": "ebgoh@gaaw.cy",
      "favoriteColours": Array [
        "brown",
        "red",
      ],
      "id": "f569f9cd-9d4a-5753-9310-ba239f59f175",
      "name": "Pauline Walters",
      "profession": "Relocation Manager",
      "salary": 20408,
    },
  ],
  "type": "items",
}
`;

exports[`Browser Search search successes returns empty array when no criteria is met 1`] = `
Object {
  "data": Array [],
  "type": "items",
}
`;

exports[`Browser Search search successes runs 2 concurrents searches 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "age": 30,
        "country": "Norfolk Island",
        "email": "tojedwo@dewpupi.pw",
        "favoriteColours": Array [
          "red",
          "blue",
          "white",
        ],
        "id": "03330c3f-1142-52b5-a2e7-24f4b2349556",
        "name": "Alfred Rhodes",
        "profession": "Organizational Development Manager",
        "salary": 53462,
      },
      Object {
        "age": 40,
        "country": "Belarus",
        "email": "dumoov@igiiva.bf",
        "favoriteColours": Array [
          "red",
        ],
        "id": "c59be44f-7c6d-55a6-aec1-585da9645888",
        "name": "George Marsh",
        "profession": "Compensation Analyst",
        "salary": 77502,
      },
      Object {
        "age": 33,
        "country": "Barbados",
        "email": "erupu@pafo.sl",
        "favoriteColours": Array [
          "red",
          "green",
        ],
        "id": "7aa57520-19ad-5fcb-aa7e-0a80b388cd80",
        "name": "Howard Bishop",
        "profession": "Franchise Management",
        "salary": 86221,
      },
    ],
    "type": "items",
  },
  Object {
    "data": Array [
      Object {
        "age": 64,
        "country": "Niger",
        "email": "nanefse@bazuvoric.tt",
        "favoriteColours": Array [
          "blue",
          "red",
        ],
        "id": "68200794-220b-509b-b367-7c769f05767d",
        "name": "Katie Lambert",
        "profession": "Fraud Investigator",
        "salary": 45390,
      },
      Object {
        "age": 48,
        "country": "Paraguay",
        "email": "zesedbuw@fec.al",
        "favoriteColours": Array [
          "dark",
          "blue",
        ],
        "id": "87e83681-7cd7-5200-b50b-493fd7bbabb5",
        "name": "Josephine Holland",
        "profession": "Corporate Planner",
        "salary": 23682,
      },
      Object {
        "age": 50,
        "country": "Tajikistan",
        "email": "votdumbi@napedocu.us",
        "favoriteColours": Array [
          "purple",
          "blue",
          "brown",
          "pink",
        ],
        "id": "cb841649-bcf9-5acd-a85b-763da24ec749",
        "name": "Jose Matthews",
        "profession": "Quality Control Engineer",
        "salary": 96922,
      },
    ],
    "type": "items",
  },
]
`;

exports[`Browser Search search successes search for the engineer profession 1`] = `
Object {
  "data": Array [
    Object {
      "age": 32,
      "country": "French Southern Territories",
      "email": "kotuligen@jopme.dk",
      "favoriteColours": Array [
        "white",
      ],
      "id": "1c7cf27a-8fce-57f9-9e90-03273e63dd3a",
      "name": "Randall Fields",
      "profession": "Production Engineer",
      "salary": 82114,
    },
  ],
  "type": "items",
}
`;

exports[`Browser Search search successes sorts by name ASC 1`] = `
Object {
  "data": Array [
    Object {
      "age": 30,
      "country": "Norfolk Island",
      "email": "tojedwo@dewpupi.pw",
      "favoriteColours": Array [
        "red",
        "blue",
        "white",
      ],
      "id": "03330c3f-1142-52b5-a2e7-24f4b2349556",
      "name": "Alfred Rhodes",
      "profession": "Organizational Development Manager",
      "salary": 53462,
    },
    Object {
      "age": 20,
      "country": "Cape Verde",
      "email": "cuw@ege.hr",
      "favoriteColours": Array [
        "purple",
        "white",
        "pink",
      ],
      "id": "9317f72f-9582-563b-8b48-da724c2af540",
      "name": "Emma Bridges",
      "profession": "Office Manager",
      "salary": 63775,
    },
    Object {
      "age": 50,
      "country": "Dominican Republic",
      "email": "nul@ko.vc",
      "favoriteColours": Array [],
      "id": "12cf4edc-bdb0-5a8e-869f-638bf4990e07",
      "name": "Gavin Adkins",
      "profession": "Private Banker",
      "salary": 60744,
    },
    Object {
      "age": 40,
      "country": "Belarus",
      "email": "dumoov@igiiva.bf",
      "favoriteColours": Array [
        "red",
      ],
      "id": "c59be44f-7c6d-55a6-aec1-585da9645888",
      "name": "George Marsh",
      "profession": "Compensation Analyst",
      "salary": 77502,
    },
    Object {
      "age": 18,
      "country": "Israel",
      "email": "ci@adutujno.sa",
      "favoriteColours": Array [
        "dark",
      ],
      "id": "eff140aa-6ea3-5ea6-ac3b-c07a8ce01f63",
      "name": "Hettie Ward",
      "profession": "Office Manager",
      "salary": 95544,
    },
    Object {
      "age": 33,
      "country": "Barbados",
      "email": "erupu@pafo.sl",
      "favoriteColours": Array [
        "red",
        "green",
      ],
      "id": "7aa57520-19ad-5fcb-aa7e-0a80b388cd80",
      "name": "Howard Bishop",
      "profession": "Franchise Management",
      "salary": 86221,
    },
    Object {
      "age": 50,
      "country": "Tajikistan",
      "email": "votdumbi@napedocu.us",
      "favoriteColours": Array [
        "purple",
        "blue",
        "brown",
        "pink",
      ],
      "id": "cb841649-bcf9-5acd-a85b-763da24ec749",
      "name": "Jose Matthews",
      "profession": "Quality Control Engineer",
      "salary": 96922,
    },
    Object {
      "age": 48,
      "country": "Paraguay",
      "email": "zesedbuw@fec.al",
      "favoriteColours": Array [
        "dark",
        "blue",
      ],
      "id": "87e83681-7cd7-5200-b50b-493fd7bbabb5",
      "name": "Josephine Holland",
      "profession": "Corporate Planner",
      "salary": 23682,
    },
    Object {
      "age": 56,
      "country": "Saudi Arabia",
      "email": "apemedop@suhe.ye",
      "favoriteColours": Array [
        "yellow",
      ],
      "id": "84b1d734-52da-5009-855e-ad7e2a610b20",
      "name": "Josie Baldwin",
      "profession": "Executive Recruiter",
      "salary": 90167,
    },
    Object {
      "age": 64,
      "country": "Niger",
      "email": "nanefse@bazuvoric.tt",
      "favoriteColours": Array [
        "blue",
        "red",
      ],
      "id": "68200794-220b-509b-b367-7c769f05767d",
      "name": "Katie Lambert",
      "profession": "Fraud Investigator",
      "salary": 45390,
    },
    Object {
      "age": 64,
      "country": "Djibouti",
      "email": "ag@litsu.ar",
      "favoriteColours": Array [
        "brown",
        "white",
      ],
      "id": "17a3b9f6-0348-54ae-9090-9861bdcaaaf1",
      "name": "Linnie McGuire",
      "profession": "Fund Raiser",
      "salary": 64126,
    },
    Object {
      "age": 22,
      "country": "Bulgaria",
      "email": "tigki@du.mr",
      "favoriteColours": Array [
        "pink",
        "red",
        "purple",
        "yellow",
      ],
      "id": "889f8cf9-d1a3-5276-8af5-0600bc8954e7",
      "name": "Mark Maxwell",
      "profession": "Chiropractor",
      "salary": 79637,
    },
    Object {
      "age": 48,
      "country": "Finland",
      "email": "ebgoh@gaaw.cy",
      "favoriteColours": Array [
        "brown",
        "red",
      ],
      "id": "f569f9cd-9d4a-5753-9310-ba239f59f175",
      "name": "Pauline Walters",
      "profession": "Relocation Manager",
      "salary": 20408,
    },
    Object {
      "age": 18,
      "country": "Taiwan",
      "email": "losuh@olaga.vc",
      "favoriteColours": Array [
        "red",
      ],
      "id": "16842fce-5775-5ee0-9173-0617d7216720",
      "name": "Philip Anderson",
      "profession": "Recruiter",
      "salary": 86023,
    },
    Object {
      "age": 32,
      "country": "French Southern Territories",
      "email": "kotuligen@jopme.dk",
      "favoriteColours": Array [
        "white",
      ],
      "id": "1c7cf27a-8fce-57f9-9e90-03273e63dd3a",
      "name": "Randall Fields",
      "profession": "Production Engineer",
      "salary": 82114,
    },
  ],
  "type": "items",
}
`;

exports[`Browser Search search successes sorts by name ASC, gets the first 5 persons (page 1) 1`] = `
Object {
  "data": Array [
    Object {
      "age": 30,
      "country": "Norfolk Island",
      "email": "tojedwo@dewpupi.pw",
      "favoriteColours": Array [
        "red",
        "blue",
        "white",
      ],
      "id": "03330c3f-1142-52b5-a2e7-24f4b2349556",
      "name": "Alfred Rhodes",
      "profession": "Organizational Development Manager",
      "salary": 53462,
    },
    Object {
      "age": 20,
      "country": "Cape Verde",
      "email": "cuw@ege.hr",
      "favoriteColours": Array [
        "purple",
        "white",
        "pink",
      ],
      "id": "9317f72f-9582-563b-8b48-da724c2af540",
      "name": "Emma Bridges",
      "profession": "Office Manager",
      "salary": 63775,
    },
    Object {
      "age": 50,
      "country": "Dominican Republic",
      "email": "nul@ko.vc",
      "favoriteColours": Array [],
      "id": "12cf4edc-bdb0-5a8e-869f-638bf4990e07",
      "name": "Gavin Adkins",
      "profession": "Private Banker",
      "salary": 60744,
    },
    Object {
      "age": 40,
      "country": "Belarus",
      "email": "dumoov@igiiva.bf",
      "favoriteColours": Array [
        "red",
      ],
      "id": "c59be44f-7c6d-55a6-aec1-585da9645888",
      "name": "George Marsh",
      "profession": "Compensation Analyst",
      "salary": 77502,
    },
    Object {
      "age": 18,
      "country": "Israel",
      "email": "ci@adutujno.sa",
      "favoriteColours": Array [
        "dark",
      ],
      "id": "eff140aa-6ea3-5ea6-ac3b-c07a8ce01f63",
      "name": "Hettie Ward",
      "profession": "Office Manager",
      "salary": 95544,
    },
  ],
  "type": "items",
}
`;

exports[`Browser Search search successes sorts by name ASC, gets the next 5 persons (page 2) 1`] = `
Object {
  "data": Array [
    Object {
      "age": 33,
      "country": "Barbados",
      "email": "erupu@pafo.sl",
      "favoriteColours": Array [
        "red",
        "green",
      ],
      "id": "7aa57520-19ad-5fcb-aa7e-0a80b388cd80",
      "name": "Howard Bishop",
      "profession": "Franchise Management",
      "salary": 86221,
    },
    Object {
      "age": 50,
      "country": "Tajikistan",
      "email": "votdumbi@napedocu.us",
      "favoriteColours": Array [
        "purple",
        "blue",
        "brown",
        "pink",
      ],
      "id": "cb841649-bcf9-5acd-a85b-763da24ec749",
      "name": "Jose Matthews",
      "profession": "Quality Control Engineer",
      "salary": 96922,
    },
    Object {
      "age": 48,
      "country": "Paraguay",
      "email": "zesedbuw@fec.al",
      "favoriteColours": Array [
        "dark",
        "blue",
      ],
      "id": "87e83681-7cd7-5200-b50b-493fd7bbabb5",
      "name": "Josephine Holland",
      "profession": "Corporate Planner",
      "salary": 23682,
    },
    Object {
      "age": 56,
      "country": "Saudi Arabia",
      "email": "apemedop@suhe.ye",
      "favoriteColours": Array [
        "yellow",
      ],
      "id": "84b1d734-52da-5009-855e-ad7e2a610b20",
      "name": "Josie Baldwin",
      "profession": "Executive Recruiter",
      "salary": 90167,
    },
    Object {
      "age": 64,
      "country": "Niger",
      "email": "nanefse@bazuvoric.tt",
      "favoriteColours": Array [
        "blue",
        "red",
      ],
      "id": "68200794-220b-509b-b367-7c769f05767d",
      "name": "Katie Lambert",
      "profession": "Fraud Investigator",
      "salary": 45390,
    },
  ],
  "type": "items",
}
`;

exports[`Browser Search search successes sorts by name DESC 1`] = `
Object {
  "data": Array [
    Object {
      "age": 32,
      "country": "French Southern Territories",
      "email": "kotuligen@jopme.dk",
      "favoriteColours": Array [
        "white",
      ],
      "id": "1c7cf27a-8fce-57f9-9e90-03273e63dd3a",
      "name": "Randall Fields",
      "profession": "Production Engineer",
      "salary": 82114,
    },
    Object {
      "age": 18,
      "country": "Taiwan",
      "email": "losuh@olaga.vc",
      "favoriteColours": Array [
        "red",
      ],
      "id": "16842fce-5775-5ee0-9173-0617d7216720",
      "name": "Philip Anderson",
      "profession": "Recruiter",
      "salary": 86023,
    },
    Object {
      "age": 48,
      "country": "Finland",
      "email": "ebgoh@gaaw.cy",
      "favoriteColours": Array [
        "brown",
        "red",
      ],
      "id": "f569f9cd-9d4a-5753-9310-ba239f59f175",
      "name": "Pauline Walters",
      "profession": "Relocation Manager",
      "salary": 20408,
    },
    Object {
      "age": 22,
      "country": "Bulgaria",
      "email": "tigki@du.mr",
      "favoriteColours": Array [
        "pink",
        "red",
        "purple",
        "yellow",
      ],
      "id": "889f8cf9-d1a3-5276-8af5-0600bc8954e7",
      "name": "Mark Maxwell",
      "profession": "Chiropractor",
      "salary": 79637,
    },
    Object {
      "age": 64,
      "country": "Djibouti",
      "email": "ag@litsu.ar",
      "favoriteColours": Array [
        "brown",
        "white",
      ],
      "id": "17a3b9f6-0348-54ae-9090-9861bdcaaaf1",
      "name": "Linnie McGuire",
      "profession": "Fund Raiser",
      "salary": 64126,
    },
    Object {
      "age": 64,
      "country": "Niger",
      "email": "nanefse@bazuvoric.tt",
      "favoriteColours": Array [
        "blue",
        "red",
      ],
      "id": "68200794-220b-509b-b367-7c769f05767d",
      "name": "Katie Lambert",
      "profession": "Fraud Investigator",
      "salary": 45390,
    },
    Object {
      "age": 56,
      "country": "Saudi Arabia",
      "email": "apemedop@suhe.ye",
      "favoriteColours": Array [
        "yellow",
      ],
      "id": "84b1d734-52da-5009-855e-ad7e2a610b20",
      "name": "Josie Baldwin",
      "profession": "Executive Recruiter",
      "salary": 90167,
    },
    Object {
      "age": 48,
      "country": "Paraguay",
      "email": "zesedbuw@fec.al",
      "favoriteColours": Array [
        "dark",
        "blue",
      ],
      "id": "87e83681-7cd7-5200-b50b-493fd7bbabb5",
      "name": "Josephine Holland",
      "profession": "Corporate Planner",
      "salary": 23682,
    },
    Object {
      "age": 50,
      "country": "Tajikistan",
      "email": "votdumbi@napedocu.us",
      "favoriteColours": Array [
        "purple",
        "blue",
        "brown",
        "pink",
      ],
      "id": "cb841649-bcf9-5acd-a85b-763da24ec749",
      "name": "Jose Matthews",
      "profession": "Quality Control Engineer",
      "salary": 96922,
    },
    Object {
      "age": 33,
      "country": "Barbados",
      "email": "erupu@pafo.sl",
      "favoriteColours": Array [
        "red",
        "green",
      ],
      "id": "7aa57520-19ad-5fcb-aa7e-0a80b388cd80",
      "name": "Howard Bishop",
      "profession": "Franchise Management",
      "salary": 86221,
    },
    Object {
      "age": 18,
      "country": "Israel",
      "email": "ci@adutujno.sa",
      "favoriteColours": Array [
        "dark",
      ],
      "id": "eff140aa-6ea3-5ea6-ac3b-c07a8ce01f63",
      "name": "Hettie Ward",
      "profession": "Office Manager",
      "salary": 95544,
    },
    Object {
      "age": 40,
      "country": "Belarus",
      "email": "dumoov@igiiva.bf",
      "favoriteColours": Array [
        "red",
      ],
      "id": "c59be44f-7c6d-55a6-aec1-585da9645888",
      "name": "George Marsh",
      "profession": "Compensation Analyst",
      "salary": 77502,
    },
    Object {
      "age": 50,
      "country": "Dominican Republic",
      "email": "nul@ko.vc",
      "favoriteColours": Array [],
      "id": "12cf4edc-bdb0-5a8e-869f-638bf4990e07",
      "name": "Gavin Adkins",
      "profession": "Private Banker",
      "salary": 60744,
    },
    Object {
      "age": 20,
      "country": "Cape Verde",
      "email": "cuw@ege.hr",
      "favoriteColours": Array [
        "purple",
        "white",
        "pink",
      ],
      "id": "9317f72f-9582-563b-8b48-da724c2af540",
      "name": "Emma Bridges",
      "profession": "Office Manager",
      "salary": 63775,
    },
    Object {
      "age": 30,
      "country": "Norfolk Island",
      "email": "tojedwo@dewpupi.pw",
      "favoriteColours": Array [
        "red",
        "blue",
        "white",
      ],
      "id": "03330c3f-1142-52b5-a2e7-24f4b2349556",
      "name": "Alfred Rhodes",
      "profession": "Organizational Development Manager",
      "salary": 53462,
    },
  ],
  "type": "items",
}
`;
